# crane-workspaces

./: .gitignore  README.md  flake.nix
example_workspace/: Cargo.toml
example_workspace/bar/: Cargo.toml
example_workspace/bar/src/: lib.rs
example_workspace/foo/: Cargo.toml
example_workspace/foo/src/: main.rs
example_workspace/others/another/: Cargo.toml
example_workspace/others/another/src/: lib.rs
example_workspace/others/middle/: Cargo.toml
extract_metadata/: Cargo.toml
extract_metadata/src/: main.rs
lib/: buildWorkspace.nix  default.nix  hashDirectory.sh  inheritWorkspaceArtifacts.nix  inheritWorkspaceArtifactsHook.sh  mergeTargets.nix  mkDummySrcFor.nix  workspaceMetadata.nix
