[package]
name = "extract_metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.17.0"
clap = { version = "4.3.21", features = ["derive", "cargo"] }
itertools = "0.11.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
serde = { version = "1.0.183", features = ["derive"] }
toml = { version = "0.7.6", package = "toml" }
