[package]
name = "middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
another = { version = "0.1.0", path = "../another" }
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
